include/petsclog.h

/*MC
    PetscLogEvent - id used to identify PETSc or user events which timed portions (blocks of executable)
     code.

    Level: intermediate

.seealso: PetscLogEventRegister(), PetscLogEventBegin(), PetscLogEventEnd(), PetscLogStage
M*/
typedef int PetscLogEvent;
/*MC
    PetscLogStage - id used to identify user stages (phases, sections) of runs - for logging

    Level: intermediate

.seealso: PetscLogStageRegister(), PetscLogStagePush(), PetscLogStagePop(), PetscLogEvent
M*/
typedef int PetscLogStage;
/* We must make the following structures available to access the event
     activation flags in the PetscLogEventBegin/End() macros. These are not part of the PETSc public
     API and are not intended to be used by other parts of PETSc or by users.

     The code that manipulates these structures is in src/sys/logging/utils.
*/
typedef struct _n_PetscIntStack *PetscIntStack;
typedef struct _n_PetscClassRegLog *PetscClassRegLog;
typedef struct _n_PetscClassPerfLog *PetscClassPerfLog;
/* -----------------------------------------------------------------------------------------------------*/
/*
    PetscEventRegInfo, PetscEventPerfInfo - Each event has two data structures associated with it. The first has
       static information about it, the second collects statistics on how many times the event is used, how
       much time it takes, etc.

    PetscEventRegLog, PetscEventPerfLog - an array of all PetscEventRegInfo and PetscEventPerfInfo for all events. There is one
      of these for each stage.

*/
typedef struct {
  char         *name;         /* The name of this event */
  PetscClassId classid;       /* The class the event is associated with */
  PetscBool    collective;    /* Flag this event as collective */
#if defined (PETSC_HAVE_MPE)
  int          mpe_id_begin;  /* MPE IDs that define the event */
  int          mpe_id_end;
#endif
} PetscEventRegInfo;
typedef struct {
  int            id;            /* The integer identifying this event */
  PetscBool      active;        /* The flag to activate logging */
  PetscBool      visible;       /* The flag to print info in summary */
  int            depth;         /* The nesting depth of the event call */
  int            count;         /* The number of times this event was executed */
  PetscLogDouble flops, flops2, flopsTmp; /* The flops and flops^2 used in this event */
  PetscLogDouble bytes, bytes2, bytesTmp; /* The bytes and bytes^2 used in this event */
  PetscLogDouble time, time2, timeTmp;    /* The time and time^2 taken for this event */
  PetscLogDouble syncTime;                /* The synchronization barrier time */
  PetscLogDouble dof[8];        /* The number of degrees of freedom associated with this event */
  PetscLogDouble errors[8];     /* The errors (user-defined) associated with this event */
  PetscLogDouble numMessages;   /* The number of messages in this event */
  PetscLogDouble messageLength; /* The total message lengths in this event */
  PetscLogDouble numReductions; /* The number of reductions in this event */
  PetscLogDouble memIncrease;   /* How much the resident memory has increased in this event */
  PetscLogDouble mallocIncrease;/* How much the maximum malloced space has increased in this event */
  PetscLogDouble mallocSpace;   /* How much the space was malloced and kept during this event */
  PetscLogDouble mallocIncreaseEvent;  /* Maximum of the high water mark with in event minus memory available at the end of the event */
  #if defined(PETSC_HAVE_DEVICE)
  PetscLogDouble CpuToGpuCount; /* The total number of CPU to GPU copies */
  PetscLogDouble GpuToCpuCount; /* The total number of GPU to CPU copies */
  PetscLogDouble CpuToGpuSize;  /* The total size of CPU to GPU copies */
  PetscLogDouble GpuToCpuSize;  /* The total size of GPU to CPU copies */
  PetscLogDouble GpuFlops;      /* The flops done on a GPU in this event */
  PetscLogDouble GpuTime;       /* The time spent on a GPU in this event */
  #endif
} PetscEventPerfInfo;
typedef struct _n_PetscEventRegLog *PetscEventRegLog;
struct _n_PetscEventRegLog {
  int               numEvents;  /* The number of registered events */
  int               maxEvents;  /* The maximum number of events */
  PetscEventRegInfo *eventInfo; /* The registration information for each event */
};
typedef struct _n_PetscEventPerfLog *PetscEventPerfLog;
struct _n_PetscEventPerfLog {
  int                numEvents;  /* The number of logging events */
  int                maxEvents;  /* The maximum number of events */
  PetscEventPerfInfo *eventInfo; /* The performance information for each event */
};
/* ------------------------------------------------------------------------------------------------------------*/
/*
   PetscStageInfo - Contains all the information about a particular stage.

   PetscStageLog - An array of PetscStageInfo for each registered stage. There is a single one of these in the code.
*/
typedef struct _PetscStageInfo {
  char               *name;     /* The stage name */
  PetscBool          used;      /* The stage was pushed on this processor */
  PetscEventPerfInfo perfInfo;  /* The stage performance information */
  PetscEventPerfLog  eventLog;  /* The event information for this stage */
  PetscClassPerfLog  classLog;  /* The class information for this stage */
} PetscStageInfo;
typedef struct _n_PetscStageLog *PetscStageLog;
struct _n_PetscStageLog {
  int              numStages;   /* The number of registered stages */
  int              maxStages;   /* The maximum number of stages */
  PetscIntStack    stack;       /* The stack for active stages */
  int              curStage;    /* The current stage (only used in macros so we don't call PetscIntStackTop) */
  PetscStageInfo   *stageInfo;  /* The information for each stage */
  PetscEventRegLog eventLog;    /* The registered events */
  PetscClassRegLog classLog;    /* The registered classes */
};
PETSC_EXTERN PetscErrorCode PetscLogGetStageLog(PetscStageLog*);
/*@
       PetscLogFlops - Log how many flops are performed in a calculation

   Input Paramters:
    flops - the number of flops

   Notes:
     To limit the chance of integer overflow when multiplying by a constant, represent the constant as a double,
     not an integer. Use PetscLogFlops(4.0*n) not PetscLogFlops(4*n)

   Level: intermediate

.seealso: PetscLogView(), PetscLogGpuFlops(), PetscLogBytes()
@*/

PETSC_STATIC_INLINE PetscErrorCode PetscLogFlops(PetscLogDouble n)
{
  PetscFunctionBegin;
#if defined(PETSC_USE_DEBUG)
  if (n < 0) SETERRQ(PETSC_COMM_SELF,PETSC_ERR_ARG_OUTOFRANGE,"Cannot log negative flops");
#endif
  petsc_TotalFlops += PETSC_FLOPS_PER_OP*n;
  PetscFunctionReturn(0);
}
/*@
       PetscLogBytes - Log how many bytes are moved in a calculation

   Input Paramters:
    bytes - the number of bytes

   Notes:
     To limit the chance of integer overflow when multiplying by a constant, represent the constant as a double,
     not an integer. Use PetscLogBytes(4.0*n) not PetscLogBytes(4*n)

   Level: intermediate

.seealso: PetscLogView(), PetscLogFlops()
@*/

PETSC_STATIC_INLINE PetscErrorCode PetscLogBytes(PetscLogDouble n)
{
  PetscFunctionBegin;
#if defined(PETSC_USE_DEBUG)
  if (n < 0) SETERRQ(PETSC_COMM_SELF,PETSC_ERR_ARG_OUTOFRANGE,"Cannot log negative bytes");
#endif
  petsc_TotalBytes += n;
  PetscFunctionReturn(0);
}
PETSC_EXTERN PetscErrorCode PetscGetFlops(PetscLogDouble *);
PETSC_EXTERN PetscErrorCode PetscGetBytes(PetscLogDouble *);
/* Initialization functions */
PETSC_EXTERN PetscErrorCode PetscLogDefaultBegin(void);
PETSC_EXTERN PetscErrorCode PetscLogAllBegin(void);
/* Output functions */
PETSC_EXTERN PetscErrorCode PetscLogView(PetscViewer);
/* Stage functions */
PETSC_EXTERN PetscErrorCode PetscLogStageRegister(const char[],PetscLogStage*);
PETSC_EXTERN PetscErrorCode PetscLogStagePush(PetscLogStage);
PETSC_EXTERN PetscErrorCode PetscLogStagePop(void);
PETSC_EXTERN PetscErrorCode PetscLogStageSetActive(PetscLogStage,PetscBool);
PETSC_EXTERN PetscErrorCode PetscLogStageGetActive(PetscLogStage,PetscBool*);
PETSC_EXTERN PetscErrorCode PetscLogStageSetVisible(PetscLogStage,PetscBool);
PETSC_EXTERN PetscErrorCode PetscLogStageGetVisible(PetscLogStage,PetscBool*);
PETSC_EXTERN PetscErrorCode PetscLogStageGetId(const char[],PetscLogStage*);
/* Event functions */
PETSC_EXTERN PetscErrorCode PetscLogEventRegister(const char[],PetscClassId,PetscLogEvent*);
PETSC_EXTERN PetscErrorCode PetscLogEventActivate(PetscLogEvent);
PETSC_EXTERN PetscErrorCode PetscLogEventDeactivate(PetscLogEvent);
PETSC_EXTERN PetscErrorCode PetscLogEventSetActiveAll(PetscLogEvent,PetscBool);
PETSC_EXTERN PetscErrorCode PetscLogEventActivateClass(PetscClassId);
PETSC_EXTERN PetscErrorCode PetscLogEventDeactivateClass(PetscClassId);
PETSC_EXTERN PetscErrorCode PetscLogEventGetPerfInfo(int,PetscLogEvent,PetscEventPerfInfo*);
#define PetscLogEventBegin(e,o1,o2,o3,o4) \
  (((PetscLogPLB && petsc_stageLog->stageInfo[petsc_stageLog->curStage].perfInfo.active && petsc_stageLog->stageInfo[petsc_stageLog->curStage].eventLog->eventInfo[e].active) ? \
    (*PetscLogPLB)((e),0,(PetscObject)(o1),(PetscObject)(o2),(PetscObject)(o3),(PetscObject)(o4)) : 0))
#define PetscLogEventEnd(e,o1,o2,o3,o4) \
  (((PetscLogPLE && petsc_stageLog->stageInfo[petsc_stageLog->curStage].perfInfo.active && petsc_stageLog->stageInfo[petsc_stageLog->curStage].eventLog->eventInfo[e].active) ? \
    (*PetscLogPLE)((e),0,(PetscObject)(o1),(PetscObject)(o2),(PetscObject)(o3),(PetscObject)(o4)) : 0))
#define PetscLogFlops(n)                   0
#define PetscGetFlops(a)                   (*(a) = 0.0,0)
#define PetscLogBytes(n)                   0
#define PetscGetBytes(a)                   (*(a) = 0.0,0)
#define PetscLogStageRegister(a,b)         0
#define PetscLogStagePush(a)               0
#define PetscLogStagePop()                 0
#define PetscLogStageSetActive(a,b)        0
#define PetscLogStageGetActive(a,b)        0
#define PetscLogStageGetVisible(a,b)       0
#define PetscLogStageSetVisible(a,b)       0
#define PetscLogStageGetId(a,b)            (*(b)=0,0)
#define PetscLogEventRegister(a,b,c)       0
#define PetscLogEventActivate(a)           0
#define PetscLogEventDeactivate(a)         0
#define PetscLogEventActivateClass(a)      0
#define PetscLogEventDeactivateClass(a)    0
#define PetscLogEventSetActiveAll(a,b)     0
#define PetscLogEventGetPerfInfo(a,b,c)    0
#define PetscLogDefaultBegin()             0
#define PetscLogAllBegin()                 0
#define PetscLogView(viewer)               0
#define PetscLogEventBegin(e,o1,o2,o3,o4)  0
#define PetscLogEventEnd(e,o1,o2,o3,o4)    0